[package]
name = "block-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
ethers = { version = "2.0.14", features = ["rustls", "ws"] }
eyre = "0.6.12"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []
gasPrice = []
trace = []
